--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@rsbuild/core": "^0.3.10",
-    "@types/node": "^20.11.13",
-    "bumpp": "^9.3.0",
-    "eslint": "^8.56.0",
+    "@rsbuild/core": "^0.7.1",
+    "@types/node": "^20.12.13",
+    "bumpp": "^9.4.1",
+    "eslint": "^8.57.0",
     "eslint-config-relaxed-ts": "^2.0.34",
     "esno": "^0.17.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "tsup": "^7.3.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.5",
     "vitest": "^0.34.6"
   },
   "engines": {
@@ -54,7 +54,8 @@
   "dependencies": {
     "@nozomuikuta/h3-cors": "^0.2.2",
     "@rsbuild/shared": "^0.0.17",
-    "h3": "^1.9.0",
+    "get-port-please": "^3.1.2",
+    "h3": "^1.11.1",
     "launch-editor-middleware": "^2.6.1"
   },
   "repository": {
